--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,14 @@
 	<!-- notification -->
 	<string name="notification_format">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g
 		id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
+	<string name="pref_last_notification">last_notification</string>
+
+	<!-- Windspeed formats -->
+	<string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g
+		id="direction">%2$s</xliff:g></string>
+	<string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g
+		id="direction">%2$s</xliff:g></string>
+	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
+	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
 
 </resources>
