issue#23 - fixed defect with not correct creation of DB during 1st launch, added "No Weather Information Available" string for situation with launch without Internet connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
 		id="direction">%2$s</xliff:g></string>
 	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
 	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
-
+	<string name="empty_forecast_list">No Weather Information Available. You need to be
+		connected to the Internet.</string>
 </resources>
