issue#23 - Lesson: Integration Points - added a check for network availability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 		id="direction">%2$s</xliff:g></string>
 	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
 	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
-	<string name="empty_forecast_list">No Weather Information Available. You need to be
-		connected to the Internet.</string>
+	<string name="empty_forecast_list">No Weather Information Available.</string>
+	<string name="empty_forecast_list_no_network">No Weather Information Available. The network is not
+		available to fetch weather data.</string>
 </resources>
