--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,9 @@
 		id="direction">%2$s</xliff:g></string>
 	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
 	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
-	<string name="empty_forecast_list">No Weather Information Available.</string>
-	<string name="empty_forecast_list_no_network">No Weather Information Available. The network is not
+	<string name="empty_forecast_list">No weather information available.</string>
+	<string name="empty_forecast_list_no_network">No weather information available. The network is not
 		available to fetch weather data.</string>
+	<string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
+	<string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
 </resources>
