--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,7 @@
 	<string name="wind_SW">SW</string>
 	<string name="wind_W">W</string>
 	<string name="wind_NW">NW</string>
+
+	<!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
+	<string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
 </resources>
