--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,13 @@
 	<string name="wind_SW">SW</string>
 	<string name="wind_W">W</string>
 	<string name="wind_NW">NW</string>
+
+	<!-- Format for retrieving art from an external source -->
+	<string name="format_art_url_default" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g
+		id="description">%s</xliff:g>.png</string>
+	<string name="format_art_url_colored" translatable="false">https://github.com/udacity/sunshine_icons/tree/master/Archive/Colored/art_<xliff:g
+		id="description">%s</xliff:g>.png</string>
+	<string name="format_art_url_mono" translatable="false">https://github
+		.com/udacity/sunshine_icons/tree/master/Archive/Mono/art_<xliff:g id="description">%s
+		</xliff:g>.png</string>
 </resources>
