--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,10 @@
 		id="description">%s</xliff:g>.png</string>
 	<string name="format_art_url_mono" translatable="false">https://bytebucket.org/hally/sunshine/raw/7a8be3172e591b609a2149376dcde44a4086702e/app/src/docs/weather-icon-pack-MerlinTheRed/mono/art_<xliff:g
 		id="description">%s</xliff:g>.png</string>
+
+
+	<!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
+	<string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
+	<!-- TODO: Get the SenderID from the Developer Console-->
+	<string name="gcm_defaultSenderId" translatable="false"></string>
 </resources>
